# bmod

./: .gitignore  README.md  bmod.toml  out.csv  pyproject.toml
.github/workflows/: tests.yml
bmod/: __version__.py  config_parser.py  grf_git.py  grf_main.py  grf_runner.py  main.py  main_twiss.py  xrv_fit.py  xrv_guess.py  xrv_io.py  xrv_main.py  xrv_runner.py  xrv_twiss_cubic.py  xrv_twiss_cubic_bspline.py  xrv_twiss_main.py  xrv_twiss_quadratic.py  xrv_twiss_quadratic_bspline.py
res/giraffe/TR3/: giraffe_IDDs_TR3.csv  giraffe_IDDs_TR3_2.csv  giraffe_IDDs_TR3_3.csv  giraffe_IDDs_TR3_4.csv  giraffe_IDDs_TR3_5.csv  giraffe_IDDs_TR3_6.csv  giraffe_IDDs_TR3_7.csv  giraffe_IDDs_TR3_8.csv
res/giraffe/TR4/: giraffe_IDDs_TR4.csv  giraffe_IDDs_TR4_2.csv  giraffe_IDDs_TR4_3.csv  giraffe_IDDs_TR4_4.csv  giraffe_IDDs_TR4_5.csv  giraffe_IDDs_TR4_6.csv  giraffe_IDDs_TR4_7.csv
res/xrv4000/: README.md  RefValues20240826.txt  XRV4000_tr4.dcm  spots_tr2.csv  spots_tr3.csv
tests/: test_main.py  test_xrv_main.py  test_xrv_twiss.py
